# geodesic-light

./: .gitignore  README.md  _config.yaml  pyproject.toml
geodesic_light/core/: gr.py  rays.py  rays_parallel.py
geodesic_light/viz/: plot.py  utils.py
jupyters/: kerr.ipynb
